# dune-pdelab

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  COPYING  LICENSE.md  Makefile.am  README  README.GIT  README.md  RELEASE_NOTES  config.h.cmake  configure.ac  dune-pdelab-config.cmake.in  dune-pdelab.pc.in  dune.module  dune_pdelab.cc  test.sh
cmake/modules/: AddVCLFlags.cmake  CMakeLists.txt  CorrectWindowsPaths.cmake  DuneAddGTest.cmake  DuneAddOpenMP.cmake  DuneAddPerfetto.cmake  DuneInitializerList.cmake  DunePdelabMacros.cmake  DunePdelabTestMacros.cmake  FindCXXDecltype.cmake  FindCXXInitializerList.cmake  FindCXXUnorderedContainers.cmake  FindGCCTypeof.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  FindVCL.cmake  Makefile.am  PdelabCheckCXX14.cmake  ResolveCompilerPaths.cmake  UseEigen.cmake  UsePETSc.cmake
doc/: CMakeLists.txt  Makefile.am  README.Changes  README.Changes-2.0  README.Changes_release_1.0.1  README.Changes_release_1.1.0
doc/Recipes/: CMakeLists.txt  mainpage.txt  recipe-blocking.cc  recipe-communication.cc  recipe-geometry-grid.cc  recipe-grid-function-operations.cc  recipe-integrating-grid-functions.cc  recipe-linear-system-assembly.cc  recipe-linear-system-solution-istl.cc  recipe-linear-system-solution-pdelab.cc  recipe-operator-splitting.cc
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in  Doxylocal  Makefile.am  doxy-header.wml  mainpage  mainpage.txt  modules  modules.txt
doc/install/: ubuntu-18.04.sh
doc/installation/: install-macos.sh  install-pdelab-basic.sh  install-ubuntu.sh  setup-dune.sh
doc/pdelab-book/: pdelab-book.tex  style.tex
doc/pdelab-book/01fespaces/: fespaces-main.tex  fespaces.tex  lit.bib  style.tex
doc/pdelab-book/02sixeasypieces/: sixeasypieces-main.tex  sixeasypieces.tex  style.tex
doc/spec/: .gitignore  multi-step.tex  spec.tex
dune/: CMakeLists.txt  Makefile.am  pdelab.hh
dune/pdelab/: CMakeLists.txt  Makefile.am  logging.cc  logging.hh
dune/pdelab/adaptivity/: CMakeLists.txt  Makefile.am  adapt.hh  adaptivity.hh
dune/pdelab/assembler/: CMakeLists.txt  applyjacobianengine.hh  assembler.hh  batchedassembler.hh  batchedcontext.hh  celldata.hh  context.hh  elementdata.hh  elementembedding.hh  enginebase.hh  exclusiverangeholder.hh  finiteelementwrapper.hh  functionspacedata.hh  gridoperator.hh  jacobianengine.hh  localviewproxy.hh  matrixdata.hh  patterndata.hh  patternengine.hh  quadraturerule.hh  residualengine.hh  utility.hh  vectordata.hh
dune/pdelab/backend/: CMakeLists.txt  Makefile.am  backendselector.hh  blockstructuredwrapper.hh  dense.hh  eigen.hh  eigenmatrixbackend.hh  eigensolverbackend.hh  eigenvectorbackend.hh  gfstraits.hh  interface.hh  istl.hh  istlflatmatrixbackend.hh  istlflatvectorbackend.hh  istlmatrixbackend.hh  istlsolverbackend.hh  istlvectorbackend.hh  novlpistlsolverbackend.hh  ovlpistlsolverbackend.hh  parallelistlhelper.hh  petscmatrixbackend.hh  petscnestedvectorbackend.hh  petscutility.hh  petscvectorbackend.hh  seqistlsolverbackend.hh  simple.hh  solver.hh  solverwrapper.hh  tags.hh  vectorutilities.hh
dune/pdelab/basis/: CMakeLists.txt  base.hh  basis.hh  composite.hh  concept.hh  discrete_global_function.hh  leaf.hh  merging_strategy.hh  ordering.hh
dune/pdelab/benchmark/: .gitignore  CMakeLists.txt  Makefile.am  grids  laplacedirichletccfv-old.cc  laplacedirichletccfv-old.ini  laplacedirichletccfv.cc  laplacedirichletccfv.ini  poisson-old.cc  poisson.cc  poisson.ini
dune/pdelab/boilerplate/: CMakeLists.txt  Makefile.am  pdelab.hh
dune/pdelab/common/: CMakeLists.txt  Makefile.am  algebra.hh  alignment.hh  benchmarkhelper.hh  borderindexidcache.hh  checks.hh  clock.cc  clock.hh  compositenode.hh  concept.hh  concepts.hh  container_entry.hh  container_traversal.hh  countingptr.hh  cpstoragepolicy.hh  crossproduct.hh  destructiblesingletonholder.hh  dictionary.cc  dictionary.hh  dofindex.hh  elementmapper.hh  entity_cast.hh  error_condition.hh  exceptions.hh  execution.hh  for_each.hh  for_each_entity.hh  function.hh  functionutilities.hh  functionwrappers.hh  geometrywrapper.hh  globalVariable.hh  globaldofindex.hh  gridtraits.hh  hostname.cc  hostname.hh  instationaryfilenamehelper.hh  intersectiontype.hh  iostatesaver.hh  (+49 more)
dune/pdelab/concepts/: CMakeLists.txt  basis.hh  container.hh  entityset_partition.hh  indexable.hh  local_basis.hh  local_constraints.hh  local_index_set.hh  lockable.hh  multiindex.hh  range.hh  size_provider.hh  tree.hh  treenode.hh
dune/pdelab/constraints/: CMakeLists.txt  Makefile.am  conforming.hh  constraints.hh  constraintsparameters.hh  constraintstransformation.hh  hangingnode.hh  hangingnodeconstraints.hh  hangingnodemanager.hh  interiornode.hh  interiornodeconstraints.hh  mfd.hh  noconstraints.hh  p0.hh  p0constraints.hh  p0ghost.hh  raviartthomas0.hh  rt0constraints.hh
dune/pdelab/experimental/: CMakeLists.txt  Makefile.am  README.txt
dune/pdelab/finiteelement/: CMakeLists.txt  Makefile.am  dglegendre.hh  edges0.5.hh  interfaceswitch.hh  l2orthonormal.hh  localbasiscache.hh  localtoglobaladaptors.hh  pk1d.hh  pk2d.hh  qkdglagrange.hh  qkdglegendre.hh  qkdglobatto.hh  simplewrapper.hh  traits.hh
dune/pdelab/finiteelementmap/: CMakeLists.txt  Makefile.am  bdm12dfem.hh  bdm1cube2dfem.hh  bdm1q2dfem.hh  bdm1simplex2dfem.hh  blockstructuredqkfem.hh  brezzidouglasmarinifem.hh  conformingconstraints.hh  dglegendre.hh  dglegendre_finiteelement.hh  edger02dfem.hh  edger12dfem.hh  edges0.5fem.hh  edges02dfem.hh  edges03dfem.hh  finiteelementmap.hh  global.hh  globalp1.hh  hangingnodeconstraints.hh  hangingnodemanager.hh  l2orthonormal.hh  mfdconstraints.hh  mimeticfem.hh  monomfem.hh  opbfem.hh  p0constraints.hh  p0fem.hh  p0ghostconstraints.hh  p0globalfem.hh  p12dfem.hh  p1fem.hh  pk1d.hh  pk1dbasis.hh  pk2dfem.hh  pk3dfem.hh  (+35 more)
lib/: Makefile.am
m4/: CMakeLists.txt  Makefile.am  cxx0x_template_aliases.m4  cxx11_decltype.m4  cxx11_initializer_list.m4  dune-pdelab.m4  dune-posix-clock.m4  dune-unordered-containers.m4  eigen.m4  gcc___typeof__.m4  petsc.m4
src/: Makefile.am  dune-pdelab-clockinfo.cc
(+864 files in other folders)
