M4FILES =					\
	cxx0x_template_aliases.m4		\
	cxx11_decltype.m4			\
	cxx11_initializer_list.m4		\
	dune-pdelab.m4				\
	dune-posix-clock.m4			\
	dune-unordered-containers.m4		\
	eigen.m4				\
	gcc___typeof__.m4			\
	petsc.m4

aclocaldir = $(datadir)/dune/aclocal
aclocal_DATA = $(M4FILES)

EXTRA_DIST = CMakeLists.txt $(M4FILES)

include $(top_srcdir)/am/global-rules
