noinst_PROGRAMS =

noinst_PROGRAMS += dune-pdelab-clockinfo
dune_pdelab_clockinfo_SOURCES = dune-pdelab-clockinfo.cc
# We need the usual CPPFLAGS since config.h includes <dune/common/deprecated.hh>
dune_pdelab_clockinfo_LDFLAGS = # the usual flags are not needed
dune_pdelab_clockinfo_LDADD = # the usual libs are not needed

include $(top_srcdir)/am/global-rules
