MODULES = 				\
	DunePdelabMacros.cmake		\
	DuneInitializerList.cmake	\
	FindPackageMultipass.cmake	\
	FindPETSc.cmake			\
	ResolveCompilerPaths.cmake	\
	UsePETSc.cmake

modulesdir = $(datadir)/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
