MODULES = 				\
	DunePdelabMacros.cmake		\
	FindCXXDecltype.cmake		\
	FindCXXInitializerList.cmake    \
	FindCXXUnorderedContainers.cmake \
	FindGCCTypeof.cmake		\
	FindPackageMultipass.cmake	\
	FindPETSc.cmake			\
	ResolveCompilerPaths.cmake	\
	UsePETSc.cmake

modulesdir = $(datadir)/dune/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
