MODULES = 				\
	CorrectWindowsPaths.cmake	\
	DunePdelabMacros.cmake		\
	DunePdelabTestMacros.cmake	\
	FindPackageMultipass.cmake	\
	FindPETSc.cmake			\
	ResolveCompilerPaths.cmake	\
	UseEigen.cmake			\
	UsePETSc.cmake

modulesdir = $(datadir)/dune/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
