pdelabdir = $(includedir)/dune/pdelab
SUBDIRS =					\
	adaptivity				\
	backend					\
	boilerplate				\
	common					\
	constraints				\
	experimental				\
	finiteelement			\
	finiteelementmap		\
	function				\
	gridfunctionspace		\
	gridoperator			\
	gridoperatorspace		\
	instationary				\
	linearsolver			\
	localoperator			\
	multistep				\
	newton					\
	ordering				\
	stationary				\
	test

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
