pdelabdir = $(includedir)/dune/pdelab
SUBDIRS =					\
	adaptivity				\
	backend					\
	boilerplate				\
	common					\
	constraints				\
	finiteelement			\
	finiteelementmap		\
	function				\
	gridfunctionspace		\
	gridoperator			\
	instationary				\
	localoperator			\
	newton					\
	ordering				\
	stationary				\
	test

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
