install(
  FILES
    applyjacobianengine.hh
    assembler.hh
    context.hh
    elementdata.hh
    enginebase.hh
    finiteelementwrapper.hh
    functionspacedata.hh
    jacobianengine.hh
    localviewproxy.hh
    matrixdata.hh
    patterndata.hh
    patternengine.hh
    quadraturerule.hh
    residualengine.hh
    utility.hh
    vectordata.hh
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/dune/pdelab/assembler
  )
