commondir = $(includedir)/dune/pdelab/backend

SUBDIRS = common eigen simple istl

common_HEADERS = backendselector.hh             \
		 eigen.hh			\
                 istl.hh                        \
                 simple.hh                      \
                 solver.hh                      \
                 tags.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
