commondir = $(includedir)/dune/pdelab/backend

SUBDIRS = common eigen simple istl

common_HEADERS = eigen.hh			\
                 interface.hh                   \
                 istl.hh                        \
                 simple.hh                      \
                 solver.hh                      \

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
