install(FILES basis.hh
              container.hh
              indexable.hh
              local_basis.hh
              local_constraints.hh
              local_index_set.hh
              lockable.hh
              multiindex.hh
              range.hh
              size_provider.hh
              tree.hh
              treenode.hh
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/pdelab/concepts)
