constraintsdir = $(includedir)/dune/pdelab/constraints
constraints_HEADERS =			\
	conformingconstraints.hh	\
	hangingnodeconstraints.hh	\
	hangingnodemanager.hh		\
	interiornodeconstraints.hh	\
	mfdconstraints.hh		\
	p0constraints.hh		\
	p0ghostconstraints.hh		\
	rt0constraints.hh

SUBDIRS = common

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
