constraintsdir = $(includedir)/dune/pdelab/constraints
constraints_HEADERS =			\
	conforming.hh	\
	hangingnode.hh	\
	hangingnodemanager.hh		\
	interiornode.hh	\
	mfd.hh		\
	p0.hh		\
	p0ghost.hh		\
	raviartthomas0.hh

SUBDIRS = common

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
