constraintsdir = $(includedir)/dune/pdelab/constraints
constraints_HEADERS =				\
	conforming.hh				\
	hangingnode.hh				\
	hangingnodemanager.hh			\
	interiornode.hh				\
	interiornodeconstraints.hh		\
	mfd.hh					\
	noconstraints.hh			\
	p0.hh					\
	p0ghost.hh				\
	raviartthomas0.hh

SUBDIRS = common

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
